<resources>
    <string name="app_name">Taller 3 Movil</string>
    <string name="email_description">Ingrese un email</string>
    <string name="apellidos">Ingrese sus apellidos</string>
    <string name="nombres">Ingrese su nombre</string>
    <string name="usuario">Registro de Usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="password">Ingrese una contraseña</string>
    <string name="password_hint">Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disponibles_str">Jugadores Disponibles</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="notification_channel_name">Notificaciones</string>
    <string name="notification_channel_description">Notificaciones push de la aplicación</string>
</resources>